# ROK-TAURI-DESCARGADOR-YT

./: .gitignore  README.MD
src-tauri/: .gitignore  Cargo.toml  licencia.rtf  tauri.conf.json
src-tauri/binaries/: crear_icono.py  descargador-yt.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
ui/: index.html  rok.css  rok.js
