[package]
name = "descargador-yt-rok"
version = "0.1.0"
description = "Un software hecho y derecho para descargar videos de YouTube sin complicaciones."
authors = ["ROK <https://github.com/Roberto-Araujo-98>"]
license = "MIT"
repository = "https://github.com/Roberto-Araujo-98/ROK-TAURI-DESCARGADOR-YT"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"
